# job-portal

server/: .gitignore  Cargo.toml
server/Job_Portal/: 000013.sst  IDENTITY  MANIFEST-000010
server/src/: main.rs
