[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.3.10", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
bcrypt = "0.17.1"
chrono = "0.4"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
#axum-extra = { version = "0.9", features = ["typed-header"] } #To be removed
